# meeru

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MVP.md  Makefile  PHASE1_IMPLEMENTATION.md  README.md  TESTING_STATUS.md  cliff.toml  clippy.toml  compose.yml  flake.nix  package.json  pnpm-lock.yaml  pubspec.yaml  rustfmt.toml  svelte.config.ts
.cargo/: audit.toml
.github/workflows/: changelog.yml  ci.yml  commits.yml  release-pr.yml  release-tag.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/meeru/: MainActivity.kt
dev/: google-oauth2.dev.yml
dev/stalwart/: config.toml
dev/stalwart/tls/: cert.pem  cert.srl  key.pem  server-cert.conf  server-cert.pem  server-ext.conf  server-key.pem  server.csr
docs/: DEVELOPMENT.md  MVP.md  api-documentation-template.org  database-schema.org  project-overview.org  storage-v1-field-mapping.org  technical-architecture.org
docs/plans/: 001-project-setup-and-architecture.org  002-basic-storage-layer.org  003-imap-smtp-integration.org  004-basic-ui-implementation.org  005-account-abstraction-layer.org  005-core-foundation-deliverables.org  006-account-abstraction-layer.org  006-unified-folder-system.org  007-cross-account-operations.org  007-unified-folder-system.org  008-cross-account-operations.org  009-contact-unification.org  009-gmail-integration.org  010-outlook-integration.org  010-unified-experience-deliverables.org  011-gmail-integration.org  011-provider-optimization.org  012-authentication-and-security.org  012-outlook-integration.org  013-cli-foundation.org  013-provider-optimization.org  014-authentication-and-security.org  015-provider-integration-deliverables.org  016-ai-infrastructure.org  017-email-intelligence.org  018-ai-powered-features.org  019-privacy-and-performance.org  020-ai-features-deliverables.org  021-cli-foundation.org  022-advanced-cli-features.org  023-api-server.org  024-agent-integration.org  025-cli-and-automation-deliverables.org  026-performance-and-scalability.org  027-advanced-features.org  028-enterprise-features.org  029-technical-risks.org  030-mitigation-strategies.org  031-core-foundation-metrics.org  032-unified-experience-metrics.org  (+7 more)
docs/prospects/: advanced-and-enterprise-features.org  ai-features-deliverables.org  ai-infrastructure-privacy-and-performance.org  cli-and-automation-deliverables.org  core-foundation-deliverables.org  email-intelligence-and-ai-features.org  index.org  provider-integration-program.org  technical-risks-and-mitigations.org  unified-experience-deliverables.org
docs/security/: cargo-audit.org
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: email_account.dart  email_credentials.dart  provider_config.dart
lib/providers/: auth_provider.dart
lib/screens/: account_list_screen.dart  account_setup_screen.dart  welcome_screen.dart
lib/services/: credential_storage_service.dart  email_auth_service.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
meeru-ai/: Cargo.toml
meeru-ai/src/: lib.rs
meeru-cli/: Cargo.toml
meeru-cli/src/: main.rs
meeru-core/: Cargo.toml
meeru-core/src/: error.rs  lib.rs  logging.rs  storage.rs
meeru-core/src/account/: mod.rs
meeru-core/src/email/: mod.rs
meeru-core/src/sync/: mod.rs
meeru-core/src/unified/: mod.rs
meeru-core/src/utils/: error_ext.rs  mod.rs
meeru-core/tests/: storage_service.rs
meeru-providers/: Cargo.toml
meeru-providers/src/: adapter.rs  error.rs  generic.rs  imap.rs  lib.rs  parser.rs  smtp.rs  traits.rs
meeru-providers/tests/: parser.rs
meeru-storage/: Cargo.toml
meeru-storage/migrations/: 20260419000000_initial_storage.sql
meeru-storage/src/: blob.rs  database.rs  error.rs  lib.rs  migrations.rs  model.rs  store.rs
meeru-storage/tests/: blob_store.rs  bootstrap.rs  repositories.rs  schema_docs.rs
meeru-ui/: Cargo.toml
meeru-ui/src/: main.rs
scripts/: check-plan-status.sh  create_migration  dump-schema.sh  migration  migrations.sh  package-desktop.sh
src/: app.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.sqlx/: query-5dd2554d75b90b8f5518df0d0fc32c0421e2cc746418d3c48e621dd36070f0ad.json  query-712db5c38a74b4f244c58cc60d657bdd02cb57e1edcb32a7639bff7b27b0bb56.json
src-tauri/capabilities/: default.json
src-tauri/examples/imap-connect/: main.rs
src-tauri/migrations/: 20251127072350_create_accounts.sql  20251127072350_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/accounts/: mod.rs
src-tauri/src/db/: imap.rs  mod.rs  model.rs  models.rs
src-tauri/src/db/migrations/: 001_initial.sql
src-tauri/src/email/: imap.rs  imap_test.rs  mod.rs  smtp.rs  smtp_test.rs  sync.rs
src-tauri/src/state/: mod.rs
src-tauri/src/test/: mod.rs
src-tauri/testdata/certs/: ca-cert.pem  ca-cert.srl  ca-key.pem  fullchain.pem  greenmail.p12  san.cnf  server-cert.pem  server-key.pem  server.csr
src-tauri/testdata/emails/testuser@example.com/Archive/: project-kickoff.eml
src-tauri/testdata/emails/testuser@example.com/Drafts/: feature-proposal.eml
src-tauri/testdata/emails/testuser@example.com/INBOX/: github-notification.eml  html-report.eml  html-welcome.eml  meeting-invite.eml  multipart-announcement.eml  newsletter.eml  project-update.eml  welcome.eml
src-tauri/testdata/emails/testuser@example.com/INBOX/projects/: deployment-notes.eml  design-review.eml
src-tauri/testdata/emails/testuser@example.com/Sent/: reply-meeting.eml
src-tauri/testdata/emails/testuser@example.com/Spam/: html-promo.eml  lottery-scam.eml  phishing-attempt.eml
src-tauri/testdata/emails/testuser@example.com/Trash/: old-meeting.eml  unsubscribe-confirmation.eml
src-tauri/tests/: integration_tests.rs
src/routes/: +page.svelte
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
