[workspace]
members = [
    "meeru-core",
    "meeru-ui",
    "meeru-cli",
    "meeru-storage",
    "meeru-providers",
    "meeru-ai",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Meeru Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darwin67/meeru"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }

# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
