[package]
name = "meeru-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# AI/ML specific
# candle-core = "0.6"
# candle-transformers = "0.6"
# tokenizers = "0.20"