[package]
name = "meeru-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "meeru-cli"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal dependencies
meeru-core = { path = "../meeru-core" }

# CLI specific
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
dialoguer = "0.11"
comfy-table = "7.1"

# API server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }