[package]
name = "meeru-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "meeru"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Internal dependencies
meeru-core = { path = "../meeru-core" }

# GUI framework
iced = { version = "0.14", features = ["tokio", "svg", "canvas", "image"] }
# iced_aw = "0.9"  # Additional widgets - uncomment when needed