[package]
name = "meeru"
version = "0.0.1"
description = "Email App"
authors = ["Darwin D. Wu <hello@darwindwu.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meeru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
test-utils = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }

# Email protocols
async-imap = "0.9"
async-native-tls = "0.5"
imap-proto = "0.16"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Runtime compatibility
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono", "uuid"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"

# Keychain/credential storage
keyring = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
testcontainers = "0.23"
tokio-test = "0.4"
tempfile = "3"

# Enable test-utils feature automatically when testing
[package.metadata.docs.rs]
features = ["test-utils"]
