[package]
name = "meeru"
version = "0.0.1"
description = "Email App"
authors = ["Darwin D. Wu <hello@darwindwu.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meeru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1.0"

# IMAP client
async-imap = { version = "0.11.1", default-features = false, features = ["runtime-tokio"] }

# Async
tokio = { version = "1.48", features = ["full"] }

# TLS
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "tls-rustls"] }
futures-util = "0.3.31"
tauri-plugin-google-auth = "0.3.4"
rust-argon2 = "3.0.0"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.23.0"

# for functional and integration tests
testcontainers = "0.25.2"
